# rustfuif

./: .dockerignore  .env  .env.dist  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml  entrypoint.sh  github.Dockerfile  index.html  prod.docker-compose.yml  sqlx-data.json
.github/workflows/: build.yml
api-spec/: spec.yaml
migrations/: 00000000000000_updated_at_proc.down.sql  00000000000000_updated_at_proc.up.sql  20200220124245_inital_setup.down.sql  20200220124245_inital_setup.up.sql  20200618150704_add_purchase_amount_to_transactions.down.sql  20200618150704_add_purchase_amount_to_transactions.up.sql  20200625133442_add_current_transaction_price.up.sql  20200717132318_add_sales_count_table.up.sql  20201020110953_constraint_beverage_count.down.sql  20201105163137_add_beverage_current_price.down.sql  20210227105652_keep_track_of_price_changes.down.sql  20210227105652_keep_track_of_price_changes.up.sql  20210518112258_group-beverage-purchases-in-orders.down.sql  20210518112258_group-beverage-purchases-in-orders.up.sql  20210519201443_remove-redundant-transaction-fields.down.sql  20210519201443_remove-redundant-transaction-fields.up.sql  20210521130202_change_invitation_state_to_enum.down.sql  20210521130202_change_invitation_state_to_enum.up.sql
migrations/2020-02-20-124245_inital_setup/: down.sql  up.sql
migrations/2020-06-18-150704_add_purchase_amount_to_transactions/: up.sql
migrations/2020-06-25-133442_add_current_transaction_price/: down.sql
migrations/2020-07-17-132318_add_sales_count_table/: down.sql
migrations/2020-07-25-150355_add_custom_beverage_count/: down.sql  up.sql
migrations/2020-07-27-082435_rename_beverage_configs_table/: down.sql  up.sql
migrations/2020-10-20-110953_constraint_beverage_count/: up.sql
migrations/2020-11-05-163137_add_beverage_current_price/: up.sql
rustfuif_cache/: Cargo.toml
rustfuif_cache/src/: lib.rs  stats.rs
src/: cache.rs  config.rs  db.rs  errors.rs  game.rs  macros.rs  main.rs  market.rs  metrics.rs  models.rs  prices.rs  schema.rs  server.rs  stats.rs  validator.rs  web.rs
src/admin/: routes.rs
src/auth/: helpers.rs  mod.rs  models.rs  routes.rs
src/ddg/: mod.rs  routes.rs
src/games/: game.rs  invitation.rs  mod.rs  models.rs  routes.rs
src/invitations/: invitation.rs  mod.rs  models.rs  routes.rs
src/transactions/: mod.rs  models.rs  routes.rs
src/users/: mod.rs  model.rs  models.rs  routes.rs
src/websocket/: mod.rs  queries.rs  routes.rs  server.rs  transactions.rs
static/: index.html
