[package]
name = "rustfuif"
version = "0.1.0"
authors = ["bart <bwillems@protonmail.com>"]
edition = "2018"
repository = "https://github.com/bartwillems/rustfuif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-cors = "0.5"
actix-identity = "0.3"
actix-service = "1.0.6"
actix-threadpool = "0.3"
actix-web = { version = "3.2", default-features = false }
actix-web-actors = "3.0"
actix-web-opentelemetry = { version = "0.8", default-features = false, features = ["metrics"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool = "0.6"
deadpool-redis = "0.6"
derive_more = "0.99"
diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
env_logger = "0.8"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
opentelemetry = { version = "0.10", default-features = false, features = ["metrics"] }
opentelemetry-prometheus = { version = "0.3" }
r2d2 = "0.8"
rand = "0.7"
redis = { version = "0.17.0" }
regex = "1.4"
reqwest = { version = "0.10", features = ["json"] }
rust-argon2 = "0.8"
sentry = "0.21"
sentry-actix = "0.21"
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"
terminator = "0.1.0"
time = "0.2"
url = "2.2"

[dev-dependencies]
actix-rt = "1.1.1"

[profile.release]
lto = "thin"
