[package]
name = "rustfuif"
version = "0.1.0"
authors = ["bart <bwillems@protonmail.com>"]
edition = "2018"
repository = "https://github.com/bartwillems/rustfuif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-cors = "0.5"
actix-identity = "0.3"
actix-service = "1.0.6"
actix-threadpool = "0.3"
actix-web = { version = "3.2", default-features = false }
actix-web-actors = "3.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
envy = "0.4"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
rand = "0.7"
regex = "1.4"
reqwest = { version = "0.10", features = ["json"] }
rust-argon2 = "0.8"
sentry = "0.21"
sentry-actix = "0.21"
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"
terminator = "0.1.0"
time = "0.2"
tokio = { version = "0.3", features = ["sync"], default-features = false }
url = "2.2"
validator = { version = "0.12", features = ["derive"] }

# Metrics & Tracing
actix-web-opentelemetry = { version = "0.8", default-features = false, features = ["metrics"] }
opentelemetry = { version = "0.10", default-features = false, features = ["metrics", "trace"] }
opentelemetry-prometheus = { version = "0.3" }
opentelemetry-jaeger = "0.9"
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.9"

rustfuif_cache = { path = "rustfuif_cache" }

[dev-dependencies]
actix-rt = "1.1.1"

[profile.release]
lto = "thin"
