[package]
name = "rustfuif"
version = "0.1.0"
authors = ["bart <bwillems@protonmail.com>"]
edition = "2018"
repository = "https://github.com/bartwillems/rustfuif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-cors = "0.5"
actix-identity = "0.3"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-threadpool = "0.3"
actix-web = { version = "3.2", default-features = false }
actix-web-actors = "3.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = { version = "0.6",  default-features = false }
derive_more = "0.99"
dotenv = "0.15.0"
envy = "0.4"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
redis = { version = "0.17.0" }
regex = "1.4"
reqwest = { version = "0.10", features = ["json"] }
rust-argon2 = "0.8"
sentry = "0.21"
sentry-actix = "0.21"
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.4", features = [ 
    "postgres",
    "chrono",
    "runtime-actix-rustls",
    "migrate",
    "macros",
    "offline",
]}
time = "0.2"
tokio = { version = "0.2", features = ["sync", "rt-core", "macros"], default-features = false }
url = "2.2"
validator = { version = "0.12", features = ["derive"] }

# Metrics & Tracing
actix-web-opentelemetry = { version = "0.9", default-features = false, features = ["metrics"] }
opentelemetry = { version = "0.11.2", default-features = false, features = ["metrics", "trace"] }
opentelemetry-prometheus = { version = "0.4" }
opentelemetry-jaeger = "0.10.0"
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.10.0"

[profile.release]
lto = "thin"
