[package]
name = "rustfuif_cache"
version = "0.1.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-redis = { version = "0.6",  default-features = false }
lazy_static = "1.4"
redis = { version = "0.17.0" }
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.3", features = ["sync"], default-features = false }

tracing = "0.1"
tracing-futures = "0.2"